--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,19 @@
 ---
 title: "About"
-image: profile.jpg
+image: profile.png
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
+    - icon: Notion
+      text: Notion
+      href: https://ksko.notion.site
     - icon: github
       text: Github
-      href: https://github.com
-
+      href: https://github.com/star77sa
+    - icon: linkedin
+      text: LinkedIn
+      href: https://linkedin.com/in/경수-고-8b7781206
 ---
+**About this blog**
 
-About this blog
+I will post my studies on machine learning, deep learning, and time series analysis on my blog.
