--- a/posts/etc/2023-08-28-블로그.ipynb
+++ b/posts/etc/2023-08-28-블로그.ipynb
@@ -20,7 +20,11 @@
    "source": [
     "### 블로그 제작 (Quarto)\n",
     "- [Quarto](https://quarto.org/docs/websites/website-blog.html)\n",
-    "- [참고영상](https://www.youtube.com/watch?v=YoKjBcuUP0s&ab_channel=Crump%27sComputationalCognitionLab)"
+    "- [참고영상](https://www.youtube.com/watch?v=YoKjBcuUP0s&ab_channel=Crump%27sComputationalCognitionLab)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "- [설정가능 icon](https://icons.getbootstrap.com/)"
    ]
   },
   {
@@ -68,28 +72,6 @@
    "source": [
     "![image-2.png](attachment:image-2.png)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
