--- a/index.qmd
+++ b/index.qmd
@@ -24,7 +24,7 @@ Email : star77sa@gmail.com
 
 - Github : [https://github.com/star77sa](https://github.com/star77sa)
 - Notion : [https://ksko.notion.site](https://ksko.notion.site)
-
+- Linkedin : [https://linkedin.com/in/star77sa](https://linkedin.com/in/star77sa)
 
 **이전 블로그**
 
