--- a/posts/확률론/통계 101 X 데이터 분석.ipynb
+++ b/posts/확률론/통계 101 X 데이터 분석.ipynb
@@ -189,7 +189,9 @@
     "- 그렇다면 이러한 모집단의 성질을 알기 위해서는 어떻게 해야 할까?\n",
     "\n",
     "`-` 전수조사 : 모집단에 포함된 모든 요소를 조사\n",
+    "\n",
     "- 모집단에 포함된 요소의 개수가 한정된, 유한모집단일 때 선택할 수 있는 조사 방법.\n",
+    "\n",
     "- 전수조사의 경우 '분석할 데이터 = 모집단'. 그러므로 획득한 데이터의 특징을 파악하고 기술하기만 해도, 모집단의 성질을 설명하고 이해할 수 있다.\n",
     "\n",
     "- 전수조사의 어려움 : 비용이나 시간 면에서 부담이 막대하여 실현 불가능할 때가 대부분."
@@ -199,7 +201,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`-` 표본조사 : "
+    "`-` 표본조사 : 모집단의 일부를 분석하여 모집단 전체의 성질을 추정하는 **추론통계(inferentail statistics)** 라는 분야가 있으며, 이것이야말로 통계학의 참모습이라 할 수 있다.\n",
+    "\n",
+    "- 표본(sample) : 추론통계에서 조사하는 모집단의 일부\n",
+    "\n",
+    "- 표본추출(sampling) : 모집단에서 표본을 뽑는 것\n",
+    "\n",
+    "- 표본조사 : 표본을 이용해 모집단의 성질을 조사하는 것\n",
+    "\n",
+    "표본을 통해 모집단의 성질을 알 수 있는 잘 알려진 방법으로, 선거 출구조사를 들 수 있다. 일부의 표만으로도 당선확실 여부를 알 수 있다.\n",
+    "\n",
+    "추론통계는 '추론'이라는 말에서 알 수 있듯이 모집단의 성질을 100% 알아맞힐 수는 없으며, 어느 정도 불확실성을 염두에 두고 평가하게 된다.\n",
+    "\n",
+    "- 대상을 설명(이해)하고 예측하기 위해서는 모집단의 성질을 알아야 한다.\n",
+    "\n",
+    "- 일반적으로 모집단을 대상으로 한 전수조사는 어렵다.\n",
+    "\n",
+    "- 표본을 조사하면 모집단의 성질을 추정할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 표본크기 : 표본에 포함된 요소의 개수를 표본크기(sample size)라 부르며, 보통 알파벳 $n$으로 나타낸다. 예를 들어 표본으로 30개를 추출했다면, $n$=30이라 표기한다.\n",
+    "\n",
+    "- 통계학에서 샘플 수라고 하면 표본의 개수를 뜻한다. 예를 들어 20명으로 이루어진 표본A와 이와 별개로 30명으로 이루어진 표본B가 있는 경우, 표본은 A, B 2개이므로 샘플 수는 2가 된다. 이처럼 표본크기와 표본의 개수는 혼동하기 쉬우므로 주의.\n",
+    "\n",
+    "- 표본크기는 모집단의 성질을 추정할 때의 확실성이나 가설검정의 결과에도 영향을 끼치기 때문에, 통계분석에 있어 중요한 요소 중 하나.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. 통계분석의 기초"
    ]
   }
  ],
