--- a/posts/확률론/통계_101_X_데이터_분석.ipynb
+++ b/posts/확률론/통계_101_X_데이터_분석.ipynb
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`-` 표본조사 : 모집단의 일부를 분석하여 모집단 전체의 성질을 추정하는 **추론통계(inferentail statistics)** 라는 분야가 있으며, 이것이야말로 통계학의 참모습이라 할 수 있다.\n",
+    "`-` 표본조사 : 모집단의 일부를 분석하여 모집단 전체의 성질을 추정하는 **추론통계(inferential statistics)** 라는 분야가 있으며, 이것이야말로 통계학의 참모습이라 할 수 있다.\n",
     "\n",
     "- 표본(sample) : 추론통계에서 조사하는 모집단의 일부\n",
     "\n",
@@ -239,6 +239,228 @@
    "source": [
     "# 3. 통계분석의 기초"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1 데이터 유형"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`-`  모집단과 표본"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`-` 변수 : 데이터 중 공통의 측정 방법으로 얻은 같은 성질의 값\n",
+    "\n",
+    "예를 들어, 키는 하나의 변수이다. 변수는 각각 다른 값을 취할 수 있으므로 변수라고 불린다.\n",
+    "\n",
+    "변수가 여러 개인 경우, 변수 간의 관계를 밝히고자 데이터를 분석할 수 있다.\n",
+    "\n",
+    "통계학에서 변수의 개수는 '차원'이라 표현되기도 한다.\n",
+    "\n",
+    "여러 개의 변수를 포함한 데이터는 '고차원 데이터'라 한다.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`-` 다양한 데이터 유형\n",
+    "\n",
+    "변수의 유형마다 분석 방법이 달라지기 때문에, 데이터를 수집할 때나 분석을 실행할 때는 변수가 어떤 유형인지 주의 깊게 고려하는 것이 중요\n",
+    "\n",
+    "1. 양적 변수 (수치형 변수)\n",
+    "\n",
+    "수치로 나타낼 수 있는 변수를 양적 변수라 한다. 양적 변수는 다시 이산형과 연속형으로 나눌 수 있다.\n",
+    "\n",
+    "- 이산형\n",
+    "\n",
+    "얻을 수 있는 값이 점점이 있는 변수를 **이산형 양적 변수(이산변수)** 라 한다. ex) 주사위의 눈은 나오는 값이 1부터 6까지의 정수\n",
+    "\n",
+    "- 연속형\n",
+    "\n",
+    "키 173.4cm나 몸무게 65.8kg 같이 간격 없이 이어지는 값으로 나타낼 수 있는 변수를 **연속형 양적 변수 (연속변수)** 라 한다.\n",
+    "\n",
+    "이는 정밀도가 높은 측정 방법을 이용하면, 원리상으로는 소수점 아래 몇 자리든 나타낼 수 있다는 점에서 이산형과는 다르다.\n",
+    "\n",
+    "이산형과 연속형의 차이점은 확률분포의 종류와 밀접한 관계가 있으므로, 데이터를 다룰 때는 주의\n",
+    "\n",
+    "2. 질적 변수 (범주형 변수)\n",
+    "\n",
+    "숫자가 아닌 범주로 변수를 나타낼 때, 이를 질적 변수 또는 범주형 변수라 한다. ex) 설문조사의 예/아니오, 동전의 앞/뒤\n",
+    "\n",
+    "숫자인 양적 변수와 달리, 변수 사이에 대소 관계는 없다.\n",
+    "\n",
+    "또한 범주형 변수는 숫자가 아니므로, 평균값 등의 수치 역시 정의할 수 없다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 데이터 분포"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`-` 그림으로 데이터 분포 표현하기\n",
+    "\n",
+    "'데이터가 어떻게 분포되어 있는지'를 그래프 등으로 시각화하여, 대략적인 데이터 경향을 파악하는 것이 데이터 분석의 첫 단계\n",
+    "\n",
+    "데이터 분포를 그림으로 나타내는 데는 어떤 값이 데이터에 몇 개 포함되어 있는가(도수, 빈도, 횟수)를 나타내는 그래프인 **도수분포도(히스토그램)** 를 자주 사용\n",
+    "\n",
+    "`-` 히스토그램은 그림으로 나타낸 것일 뿐\n",
+    "\n",
+    "히스토그램은 대략적인 데이터 구성을 파악하는 것이 목적이지, 무엇인가 결론을 내기 위한 것이 아니라는 점을 명심"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.3 통계량\n",
+    "\n",
+    "`-` 데이터 특징 짓기\n",
+    "\n",
+    "수집한 데이터로 이런저런 계산을 수행하여 얻은 값을 일반적으로 **통계량** 이라 한다.\n",
+    "\n",
+    "데이터 그 자체의 성질을 기술하고 요약하는 통계량을, **기술통계량** 또는 **요약통계량** 이라 부른다.\n",
+    "\n",
+    "- 통계량과 정보\n",
+    "\n",
+    "1개 또는 몇 개의 통계량으로 요약한다는 것은, 데이터에 있는 정보 중 버리는 부분이 있다는 것을 뜻한다. 예를 들어 평균값에는 '어느 정도 데이터가 퍼져 있는지'의 정보는 포함되지 않습니다. 다른 예로 데이터에 포함된 가장 큰 값인 최댓값도 하나의 통계량이지만 여기에는 데이터 전체의 경향을 알 수 있는 정보가 없다. 이처럼 최댓값은 분포의 중심 위치나 분포 형태에 관한 정보가 주어지지 않으므로, 분포를 파악하는 데는 적합한 통계량이 아니다.\n",
+    "\n",
+    "\n",
+    "`-` 다양한 기술통계량\n",
+    "\n",
+    "대략적인 분포 위치를 나타내는 대푯값 : 평균값, 중앙값, 최빈값\n",
+    "\n",
+    "데이터 퍼짐 정도를 나타내는 값 : 분산, 표준편차"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 평균값(mean)\n",
+    "\n",
+    "표본의 평균값은 표본에서 얻었다는 점에서 '표본평균'이라고도 한다.\n",
+    "\n",
+    "$$ \\bar{x} = \\frac{1}{n}(x_1+x_2+...+x_n) = \\frac{1}{n}\\sum^n_{i=1} x_i $$\n",
+    "\n",
+    "평균값은 계산 시 모든 값을 고려하기 때문에 이상값의 영향을 받기 쉽다는 특징이 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 중앙값(median)\n",
+    "\n",
+    "'크기 순으로 값을 정렬했을 때 한가운데 위치한 값'\n",
+    "\n",
+    "표본크기 $n$이 홀수라면 가운데 값은 1개이므로 이 값이 중앙값이다. 한편 표본크기 $n$이 짝수일 때는 가운데에 있는 값이 2개이므로, 두 값의 평균값을 중앙값으로 한다.\n",
+    "\n",
+    "중앙값은 수치 자체의 정보가 아닌 순서에만 주목하기에, 극단적으로 크거나 작은 값이 있어도 영향을 받지 않는다는 특징이 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 최빈값(mode)\n",
+    "\n",
+    "'데이터 중 가장 자주 나타나는 값'\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "처음에 히스토그램을 그려 대략적인 파악을 한 다음, 대푯값으로 적절하게 분포를 특징 지을 수 있는지 확인하는 것이 중요한 데이터 분석 작업 순서라는 점을 꼭 기억"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`-` 분산과 표준편차\n",
+    "\n",
+    "데이터 퍼짐을 평가하기 위해서는 **분산(variance)** 혹은 **표준편차(standard deviation, S.D.)** 라는 통계량을 계산.\n",
+    "\n",
+    "표본에서 구하고, 표본을 평가한다는 점을 강조하여 '표본분산(sample variance)'이나 '표본표준편차(sample standard deviation)'라 부르기도 한다.\n",
+    "\n",
+    "**표본분산** 은 표본의 각 값과 표본평균이 어느 정도 떨어져 있는지를 평가하는 것으로, 데이터 퍼짐 상태를 정량화한 통계량이다.\n",
+    "\n",
+    "$$ s^2 = \\frac{1}{n}\\{(x_1-\\bar{x})^2 + (x_2-\\bar{x})^2+...+(x_n-\\bar{x})^2\\} = \\frac{1}{n}\\sum^n_{i=1}(x_i-\\bar{x})^2 $$\n",
+    "\n",
+    "- 표본분산의 성질\n",
+    "\n",
+    "1. $ s^2 \\geqq 0 $\n",
+    "\n",
+    "2. 모든 값이 같다면 0\n",
+    "\n",
+    "3. 데이터 퍼짐 정도가 크면 $s^2$이 커짐\n",
+    "\n",
+    "표본표준편차 $s$는, 이 표본분산의 제곱근을 취한 값이다.\n",
+    "\n",
+    "계산상 분산과 표준편차에는 제곱근인지 아닌지의 차이만 있으며, 포함하는 정보에는 차이가 없다. 분산 단위는 원래 값 단위의 제곱이 되지만, 표준편차는 제곱근을 취하므로 원래 단위와 일치한다. 따라서 데이터 퍼짐 정도를 정량화한 지표로는 표준편차 쪽이 감각적으로 더 알기 쉽게 느껴진다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`-` 분산을 확인할 수 있는 상자 수염 그림\n",
+    "\n",
+    "이름처럼 상자와 수염으로 구성되며, 각각은 데이터의 분포를 특징 짓는 통계량을 나타낸다.\n",
+    "\n",
+    "제1 사분위수(Q1) : 데이터의 25%가 이 값보다 작거나 같음\n",
+    "\n",
+    "제2 사분위수(Q2) : 중앙값\n",
+    "\n",
+    "제3 사분위수(Q3) : 데이터의 75%가 이 값보다 작거나 같음\n",
+    "\n",
+    "사분위간 범위 : 제1 사분위수와 제3 사분위수 간의 거리(Q3-Q1). 상자로 나타낸 부분.\n",
+    "\n",
+    "수염은 상자 길이(사분위간 범위)의 1.5배 길이를 상자로부터 늘인 범위 안에서, 최댓값 또는 최솟값을 가리킨다.\n",
+    "\n",
+    "이 범위에 포함되지 않은 값은 이상값으로 정의된다.\n",
+    "\n",
+    "상자 수염 그림은 중앙값이나 사분위수, 최댓값, 최솟값 등의 통계량은 나타내는 반면, 히스토그램에서 볼 수 있는 상세한 분포 형태 정보는 포함하지 않는다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`-` 분포를 시각화하는 다양한 방법\n",
+    "\n",
+    "- 막대그래프(평균값) + 오차 막대(S.D. or S.E.)\n",
+    "\n",
+    "- 바이올린 플롯\n",
+    "\n",
+    "- 스웜 플롯\n",
+    "\n",
+    "- 상자 수염 그림 + 스웜 플롯"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
