--- a/posts/확률론/통계_101_X_데이터_분석.ipynb
+++ b/posts/확률론/통계_101_X_데이터_분석.ipynb
@@ -460,6 +460,365 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### ~ 67p. 3장 나머지 정리 必"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. 추론통계 ~ 신뢰구간"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 데이터로 모집단의 성질을 추정한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.1 추론통계를 배우기 전에"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`-` 전수조사와 표본조사"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "전수조사 : 모집단의 모든 요소를 조사\n",
+    "\n",
+    "표본조사 : 모집단의 일부인 표본으로 모집단의 성질을 추정"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`-` 데이터를 얻는다는 것"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\" 데이터(표본)를 얻는다는 것은 무엇인가? \" : 모집단에 포함된 전체 값으로 구성된 분포에서 일부를 추출하는 것"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "모집단분포를 특징 짓는 양을 **모수** 또는 **파라미터** 라 부른다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "확률분포와 실현값의 관계는 모집단과 표본의 관계와 매우 비슷\n",
+    "\n",
+    "'모집단 = 확률분포, 표본 = 확률분포를 따르는 실현값' 이라고 생각하자"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\" 얻은 실현값으로 이 값을 발생시킨 확률분포를 추정한다 \" 라는 목표로 바꾸어 말할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 모집단분포 모형화\n",
+    "\n",
+    "ex) 성인 남성 키의 분포는 정규분포와 매우 비슷하지만, 엄밀한 의미에서 정규분포가 되는 일은 있을 수 없다.\n",
+    "\n",
+    "그러나 있는 그대로를 바로 수학적으로 다룰 수 없을 때가 잦기 때문에, 3장에서 배운 것과 같은 **수식** 으로 기술하게 된다.\n",
+    "\n",
+    "그러면 수학적으로 다룰 수 있는 확률분포(모형)에 근사하여 작업을 진행할 수 있게 되어, 모집단의 추정이 용이해진다.\n",
+    "\n",
+    "수학적인 확률분포로 모집단 분포를 근사하는 것을 여기서는 **모형화(modeling)** 라 부르도록 하자"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "예를 들어 정규분포로 근사할 수 있다면, 평균과 표준편차 같은 2가지 파라미터만으로 분포를 기술할 수 있으며, 다룰 수도 있게된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이 장 후반에 등장하는 t분포는, 이와 같이 모집단이 정규분포라는 가정하에 이용할 수 있는 분포이다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 무작위추출\n",
+    "\n",
+    "모집단에서 표본을 얻을 때 중요한 것이 **무작위추출(random sampling)** 이다.\n",
+    "\n",
+    "데이터를 얻을 때 모집단에 포함된 요소를 무작위로 선택하여 추출하는 방식\n",
+    "\n",
+    "독립적이지 않은 선택방식도 적절하지 않다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 무작위추출 방법\n",
+    "\n",
+    "이상적인 무작위추출 방법은 표본에 있을 수 있는 모든 요소를 목록으로 만들고, 난수를 이용하여 표본을 정하는 것. 이를 **단순무작위추출법** 이라 한다.\n",
+    "\n",
+    "실제로 자주 사용하는 방법은 **층화추출법** 이다. 이는 모집단을 몇개의 층(집단)으로 미리 나눈 뒤, 각 층에서 필요한 수의 조사대상을 무작위로 추출하는 방법이다.\n",
+    "\n",
+    "그 밖에도 계통추출법, 군집추출법 등 다양한 방법이 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 편향된 추출로는 올바른 추정이 어려움"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.2 표본오차와 신뢰구간"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "모집단의 평균 $\\mu$나 $\\sigma$ 등은 고정된 값이지만, 모집단분포에서 얻은 표본 $x_1, x_2, ... x_n$은 확률적으로 변하는 확률변수라는 사실을 염두에 둘 것"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`확률변수의 정확한 의미는?`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "일반적으로 표본평균은 모집단평균 $\\mu$와 일치하지 않는다. 즉 '정말로 알고 싶은 것'과 '실제로 손 안에 있는 데이터'에는 어긋남(오차)가 생기는 것. 이런 오차를 **표본오차(표집오차, sampling error)** 라고 한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "표본오차는 표본을 추출할 때의 인위적인 실수나 잘못으로 생기는 오차가 아니라, 데이터 퍼짐이 있는 모집단에서 확률적으로 무작위 표본을 고르는 데서 발생하는, 피할 수 없는 오차라는 점에 주의"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 큰 수의 법칙\n",
+    "\n",
+    "표본평균과 모집단평균의 관계에는 **큰 수의 법칙(law of large numbers)** 이 성립한다.\n",
+    "\n",
+    "표본크기 $n$이 커질수록 표본평균 $\\bar{x}$가 모집단평균 $\\mu$에 한없이 가까워진다는 법칙.\n",
+    "\n",
+    "다시 말해 표본오차 $\\bar{x}-\\mu$가 $0$에 한없이 가까워진다는 뜻이기도 하다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`-` 표본오차의 확률분포\n",
+    "\n",
+    "표본오차의 확률분포를 알면 어느 정도 크기의 오차가, 어느 정도의 확률로 나타나는지를 알 수 있게 된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 중심극한정리\n",
+    "\n",
+    "표본오차의 분포에 관해 중요한 정보를 제공하는 것이 **중심극한정리(central limit theorem)** 이다. \n",
+    "\n",
+    "모집단이 어떤 분포이든 간에, 표본크기 $n$이 커질수록 표본평균 $\\bar{x}$의 분포는 정규분포로 근사할 수 있다는 것을 의미\n",
+    "\n",
+    "'표본평균 $\\bar{x}$의 분포? : 표본크기 $n$으로 표본을 추출하고 표본평균 $\\bar{x}$를 계산하는 작업을 몇 번이고 반복해서, 표본평균을 한데 모아 히스토그램을 그린다는 것.\n",
+    "\n",
+    "표본크기 $n$이 커질수록 표본평균의 분포는 다음과 같은 정규분포로 근사할 수 있다.\n",
+    "\n",
+    "평균 : 모집단평균 $\\mu$\n",
+    "\n",
+    "표준편차 : $\\frac{\\sigma}{\\sqrt{n}}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Chat GPT : 중심극한정리와 대수의 법칙의 차이점이 뭐야?\n",
+    "\n",
+    "1. 중심극한정리 (Central Limit Theorem):\n",
+    "\n",
+    "중심극한정리는 확률론의 기본 개념 중 하나로, 독립적인 확률 변수들의 합 또는 평균이 정규분포에 근사하는 현상을 설명합니다. 중심극한정리는 다음과 같은 특징을 가집니다:\n",
+    "\n",
+    "독립적인 확률 변수들의 합 또는 평균은 표본 크기가 충분히 크면 정규분포에 근사한다.\n",
+    "\n",
+    "중심극한정리는 모집단의 분포에 상관 없이 적용될 수 있으며, 모집단이 어떤 분포를 따르더라도 표본 평균의 분포는 정규분포에 가까워진다.\n",
+    "\n",
+    "2. 대수의 법칙 (Law of Large Numbers):\n",
+    "\n",
+    "대수의 법칙은 표본 크기가 커질수록 표본 평균이 모집단의 평균에 가까워진다는 원리를 설명합니다. 대수의 법칙은 다음과 같은 특징을 가집니다:\n",
+    "\n",
+    "대수의 법칙은 표본 크기가 커질수록 표본 평균이 모집단 평균에 수렴한다.\n",
+    "\n",
+    "대수의 법칙은 표본 크기가 충분히 크다면 모집단의 분포에 상관 없이 적용될 수 있으며, 모집단이 어떤 분포를 따르더라도 표본 평균은 모집단 평균에 가까워진다.\n",
+    "\n",
+    "차이점:\n",
+    "\n",
+    "중심극한정리는 확률 변수들의 합 또는 평균의 분포에 대한 이론을 다루는 것이며, 주로 정규분포와 관련이 있습니다.\n",
+    "\n",
+    "대수의 법칙은 표본 크기가 커질 때 표본 평균이 모집단 평균으로 수렴하는 원리를 설명하며, 분포에 대한 특별한 가정이 필요하지 않습니다. 이는 큰 표본 크기를 가지고 있는 경우에는 표본의 평균이 모집단 평균과 거의 같아질 것이라는 것을 의미합니다.\n",
+    "\n",
+    "중심극한정리와 대수의 법칙은 통계 분석과 데이터 분석에서 중요한 개념으로 사용되며, 표본 크기와 확률 분포에 대한 이해를 높이는 데 도움을 줍니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 추정량\n",
+    "\n",
+    "모집단의 성질을 추정하는 데 사용하는 통계량을 **추정량** 이라 한다.\n",
+    "\n",
+    "표본크기 $n$을 무한대로 했을 때, 모집단의 성질과 일치하는 추정량을 **일치추정량** 이라 하고, 추정량의 평균값(기댓값)이 모집단의 성질과 일치할 때의 추정량은 **비편향추정량** 이라 한다.\n",
+    "\n",
+    "비편향추정량은 매번 얻을 때마다 확률적으로 다른 값이 되지만, 평균으로 보면 모집단의 성질을 과대하지도 과소하지도 않게 나타내는 양을 뜻한다.\n",
+    "\n",
+    "모집단의 성질을 추정할 때 편향된 추정은 바람직하지 않다. 그러므로 비편향추정량은 바람직한 추정량이다.\n",
+    "\n",
+    "`비편향추정량, 일치추정량 ??`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "추정량 하나하나는 모집단의 성질(여기서는 $\\mu$)에서 벗어나지만, 이를 모아 구한 평균값이 $\\mu$와 일치하는 경우 이를 비편향추정량이라 부른다.\n",
+    "\n",
+    "중심극한정리에서 본 것 처럼 표본평균의 분포의 평균은 모집단의 성질인 $\\mu$와 일치하므로, 표본평균은 모집단평균 $\\mu$를 편향되지 않게 추정하는 비편향추정량이다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "한편 표본표준편차 $s$(또는 표본분산 $s^2$)는 사정이 조금 다르다.\n",
+    "\n",
+    "표본표준편차 $s$의 정의에서 루트 안의 분모는 $n$이었다. 기술통계에서 데이터 퍼짐 정도를 평가할 때는 문제가 없지만, 모집단의 표준편차 $\\sigma$를 과소평가한다는 문제가 있다.\n",
+    "\n",
+    "올바르게는 $n-1$로 나눈 다음 식이, 모집단 표준편차 $\\sigma$의 비편향추정량이 된다.\n",
+    "\n",
+    "$s = \\sqrt{s^2} = \\sqrt{\\frac{1}{n-1}\\sum^n_{i=1}(x_i-\\bar{x})^2}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> $n$으로 나누면 왜 과소평가가 되는가?\n",
+    "\n",
+    "각 값 $x_i$와 표본평균 $\\bar{x}$의 차이를 제곱하여 값이 얼마나 퍼졌는지를 측정하지만 원래 $(x_i-\\mu)^2$로 계산해야 하는 것을 $\\mu$가 미지수이므로 $(x_i-\\bar{x})^2$로 바꾼 것이다.\n",
+    "\n",
+    "$\\bar{x}$는 $\\mu$와 일치하지 않으며, 각 값 $x_i$와 $\\mu$의 위치 관계 또는 각 값 $x_i$와 $\\bar{x}$의 위치 관계를 생각하면 $x_i$는 $\\mu$보다도 $\\bar{x}$에 가까이 있을 것이다.\n",
+    "\n",
+    "그러므로 $(x_i-\\bar{x})^2$의 합은 $(x_i-\\mu)^2$보다도 작은 값이 된다. \n",
+    "\n",
+    "따라서 $n$으로 나누지 않고 $n-1$로 나누어 과소평가를 보정하는 것"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 표본오차의 분포\n",
+    "\n",
+    "표본크기 $n$이 커질수록 표본오차 $\\bar{x}-\\mu$의 분포는 다음 정규분포로 근사할 수 있다.\n",
+    "\n",
+    "평균 : 0\n",
+    "\n",
+    "표준편차 : $\\frac{\\sigma}{\\sqrt{n}}$\n",
+    "\n",
+    "표본오차 $\\bar{x}-\\mu$의 분포는 모집단의 표준편차 $\\sigma$와 표본크기 $n$ 등 2개의 값만 정해지면 알 수 있다는 것. 이 $\\frac{\\sigma}{\\sqrt{n}}$을 **표준오차(standard error)** 라 한다.\n",
+    "\n",
+    "$\\sigma$는 모집단의 성질이므로 보통 우리로선 알 수 없는 미지의 숫자이다. 그러므로 앞서 살펴본 표본에서 추정한 비편향표준편차 $s$를 $\\sigma$ 대신 사용한 $\\frac{s}{\\sqrt{n}}$를 표준오차로 삼는다.\n",
+    "\n",
+    "이때 표본오차(단 $\\frac{s}{\\sqrt{n}}$으로 나눔)는 정규분포가 아니라 정규분포와 매우 닮은 t분포를 따르게 된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`-` 신뢰구간이란?\n",
+    "\n",
+    "표본오차의 확률분포는 얼마나 큰 오차가 어느 정도의 확률로 나타나는가를 알 수 있다.\n",
+    "\n",
+    "간단하게 오차를 정량화하기 위해서, **신뢰구간(confidence interval)** 이라는 개념을 도입\n",
+    "\n",
+    "> 정규분포의 성질에서 $평균값 \\pm$ 2 $\\times 표준편차$ 범위에 약 95%의 값을 포함하고 있었다. 즉, 정규분포에서 하나의 값을 무작위로 꺼내면 95%의 확률로 그 범위에 포함된다는 뜻..........이 아니었던거 같은데 100번 뽑았을 때 95번은 모평균을 포함한다 아니었나?.. 다시 확인해볼 것\n",
+    "\n",
+    "이 개념을 그대로 표본오차의 정규분포에 적용해보면 \n",
+    "\n",
+    "표본오차의 약 95%는 $0-2\\times \\frac{s}{\\sqrt{n}} \\leq \\bar{x} - \\mu \\leq 0 + 2 \\times \\frac{s}{\\sqrt{n}}$\n",
+    "\n",
+    "$\\bar{x}$ 에서 $\\mu$ 를 알고 싶기 때문에 이항하고 음수를 곱하면 $\\bar{x} - 2 \\times \\frac{s}{\\sqrt{n}} \\leq \\mu \\leq \\bar{x} + 2 \\times \\frac{s}{\\sqrt{n}}$"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
