--- a/posts/확률론/통계_101_X_데이터_분석.ipynb
+++ b/posts/확률론/통계_101_X_데이터_분석.ipynb
@@ -797,7 +797,7 @@
     "\n",
     "간단하게 오차를 정량화하기 위해서, **신뢰구간(confidence interval)** 이라는 개념을 도입\n",
     "\n",
-    "> 정규분포의 성질에서 $평균값 \\pm$ 2 $\\times 표준편차$ 범위에 약 95%의 값을 포함하고 있었다. 즉, 정규분포에서 하나의 값을 무작위로 꺼내면 95%의 확률로 그 범위에 포함된다는 뜻..........이 아니었던거 같은데 100번 뽑았을 때 95번은 모평균을 포함한다 아니었나?.. 다시 확인해볼 것\n",
+    ">정규분포의 성질에서 $평균값 \\pm$ 2 $\\times 표준편차$ 범위에 약 95%의 값을 포함하고 있었다. 즉, 정규분포에서 하나의 값을 무작위로 꺼내면 95%의 확률로 그 범위에 포함된다는 뜻\n",
     "\n",
     "이 개념을 그대로 표본오차의 정규분포에 적용해보면 \n",
     "\n",
@@ -807,19 +807,86 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
+   "source": [
+    "- 신뢰구간의 해석\n",
+    "\n",
+    "OO% 신뢰구간을 해석하면 \"OO%의 확률로 이 구간에 모집단평균 $\\mu$가 있다.\" 가 된다. \n",
+    "\n",
+    "단, 확률변수는 모집단평균 $\\mu$가 아니라 표본평균 $\\bar{x}$(또는 신뢰구간)이다.\n",
+    "\n",
+    "> 즉 $\\mu$가 확률적으로 변화하여 그 구간에 포함되는 것이 아니라, 모집단에서 표본을 추출하여 OO% 신뢰구간을 구하는 작업을 100번 반복했을 때 평균적으로 그 구간에 $\\mu$가 포함되는 것이 OO번이란 뜻.\n",
+    "\n",
+    "하나의 표본에서 얻은 신뢰구간은 $\\mu$를 포함하거나 포함하지 않거나 둘 중 하나이다.\n",
+    "\n",
+    "신뢰구간은 표본에서 구한 모집단 $\\mu$의 추정값을 어느 정도 신뢰할 수 있는지를 나타낸다고 할 수 있다.\n",
+    "\n",
+    "신뢰구간이 좁다면 추정값 가까이에 $\\mu$가 있다고 생각할 수 있으므로, 추정값은 신뢰할 수 있는 값이다. 반대로 신뢰구간이 넓다면 추정값과 모집단평균 $\\mu$사이의 오차는 커지는 경향이 있으므로 신뢰도는 낮다.\n",
+    "\n",
+    "OO% 신뢰구간에서 'OO%'에는 일반적으로 95%를 사용한다. 이 숫자는 과학계에서 관례로 사용되어 온 것으로, 필연성은 없다.\n",
+    "\n",
+    "가설검정에서 유의수준 5%는 95% 신뢰구간과 동전의 양면과 같은 관계이다.\n",
+    "\n",
+    "95% 신뢰구간이란 평균적으로 20번 중 1번 정도 벗어난다는, 달리 말하면 20번 중 19번은 구간에 모집단평균을 포함한다는 뜻이다."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "`-` t분포와 95% 신뢰구간\n",
+    "\n",
+    "정규분포의 성질을 \"$평균값\\pm 2\\times 표준편차$\"안에 95%라고 대략적으로 말해왔지만 정확하게는 \"$평균값\\pm 1.96\\times 표준편차$\"의 범위가 95%가 된다.\n",
+    "\n",
+    "문제가 되는 것은 중심극한정리는 표본크기 $n$이 커질수록 근사적으로 성립하기에 실제 데이터 분석에서 볼 수 있는 작은 표본크기의 경우 표본오차가 정규분포를 따른다고 말할 수 없다는 것과 모집단의 $\\sigma$ 대신 $s$를 써야만 한다는 것.\n",
+    "\n",
+    "이때 활약하는 것이 **$t$분포**\n",
+    "\n",
+    "**$t$분포**는 모집단이 정규분포라는 가정하에 미지의 모집단 표준편차 $\\sigma$를 표본으로 계산한 비편향표준편차 $s$로 대용했을 때, $\\bar{x}-\\mu$를 표준오차 $\\frac{s}{\\sqrt{n}}$로 나누어 표준화한 값이 따르는 분포이다.\n",
+    "\n",
+    "$$\\frac{\\bar{x}-\\mu}{\\frac{s}{\\sqrt{n}}}$$\n",
+    "\n",
+    "이 값은 표준오차 $\\frac{s}{\\sqrt{n}}$를 단위로 표본오차 $\\bar{x}-\\mu$가 몇 개분인지를 나타낸다.(3장의 표준화와 마찬가지)\n",
+    "\n",
+    "복잡하다고 느낄 수도 있겠으나, $t$분포 자체는 정규분포와 매우 비슷한 형태이며 표본크기 $n$에 따라 모양이 조금 달라질 뿐, 신뢰구간을 구하는 논리는 그대로이다.\n",
+    "\n",
+    "95%라는 엄밀한 값을 얻고자 미세 조정하는 것으로 생각하면 된다.\n",
+    "\n",
+    "아울러 표본크기 $n$이 커짐에 따라, $t$분포는 정규분포에 가까워진다.\n",
+    "\n",
+    "$t$분포에서 표본크기 $n=10$인 경우에는 평균 0, 표준편차 1인 정규분포보다 조금 넓어져 하위 2.5%, 상위 2.5%인 지점이 -2.26과 +2.26이 된다 (정규분포는 -1.96, +1.96)\n",
+    "\n",
+    "그러므로 신뢰구간을 구하는 식에서는 $\\pm 2$나 $\\pm 1.96$이 아닌 $\\pm 2.26$을 $\\frac{s}{\\sqrt{n}}$에 곱해 계산한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 정밀도를 높이려면\n",
+    "\n",
+    "보다 신뢰 가능한 평균값을 추정하고 싶을 때는 어떻게 할까?\n",
+    "\n",
+    "오차분포의 너비를 나타내는 **표준오차 \\frac{s}{\\sqrt{n}}**에 주목해보면 이를 작게 만들기 위해서는 분자인 비편향표준편차 $s$를 작게 하거나, 분모인 표본크기 $n$을 크게 하는 두 가지 방법이 있다.\n",
+    "\n",
+    "$s$(또는 $\\sigma$)는 모집단 데이터 퍼짐이라는 모집단 그 자체의 성질에서 유래하기에 작게 만들기 어렵지만, 측정한 데이터 퍼짐(변동) 정도를 줄일 수는 있다. 데이터 퍼짐이 증가하면 결과적으로 $s$(또는 $\\sigma$)가 커지기 때문에, 측정을 한층 정밀하게 실시하는 식으로 대처 가능한 경우도 있다.\n",
+    "\n",
+    "표본크기 $n$에 관해서는, $n$을 크게 만듦으로써 더 높은 정밀도로 추정할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- $t$분포를 사용할 때 주의할 점\n",
+    "\n",
+    "표본크기 $n$이 작아도 적용 가능한 %t$분포에는 '정규분포에서 얻은 데이터'라는 가정이 필요하다. 즉, $t$분포는 데이터 $x_1, x_2, ... , x_n$을 정규분포라는 모형에서 얻었을 때의 (표준화된) 표본오차가 따르는 분포이다. 데이터의 배경에 잇는 모집단분포가 완벽한 정규분포일 수는 없으므로, 얻은 95% 신뢰구간은 정확한 95%가 아니라는 점에 주의.\n",
+    "\n",
+    "특히 문제가 되는 것은 정규분포와 현저하게 다른 분포에서 데이터를 얻었을 때이다. 이 경우 95% 신뢰구간을 구해도 95%에서 벗어날 수 있어 주의해야 한다.\n",
+    "\n",
+    "단, 표본크기 $n$이 클 때는 중심극한정리에 따라 모집단이 정규분포가 아니더라도 표본평균을 정규분포로 근사할 수 있으므로 신뢰구간은 정확해진다."
+   ]
   }
  ],
  "metadata": {
