--- a/posts/데이터_분석.ipynb
+++ b/posts/데이터_분석.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "- `높은 p-value를 귀무가설이 옳다는 증거로 이해하는 오류` : 높은 p-value는 대립가설을 입증하는 증거가 불충분함을 의미한다. 효과가 아주 강해도 데이터 관측치가 적으면 p-value가 높을 수 있다. 즉, 높은 p-value는 증거/데이터 불충분으로 이해해야 한다.\n",
     "\n",
-    "- `낮은 p-value가 항상 의미있다고 이해하는 오류` : 만약 표본크기가 너무 크고, 표본퍙균의 증가값 자체가 너무 적다면 낮은 p-value 자체로는 의미가 없다.\n",
+    "- `낮은 p-value가 항상 의미있다고 이해하는 오류` : 만약 표본크기가 너무 크고, 표본평균의 증가값 자체가 너무 적다면 낮은 p-value 자체로는 의미가 없다.\n",
     "\n",
     "- 95% 신뢰구간의 정의 : 같은 모형에서 반복해서 표본을 얻고 신뢰구간을 얻을 때 신뢰구간이 참 모수값을 포함할 확률이 95%가 되도록 만들어진 구간\n",
     "\n",
@@ -136,6 +136,12 @@
     "\n",
     "- 포아송 어라이블 : \n",
     "\n",
+    "- 마르코프 과정 : \n",
+    "\n",
+    "- 정보이론 : \n",
+    "\n",
+    "- 신호 및 시스템 : \n",
+    "\n",
     "- 표준화(Standardization) : 표준화는 데이터의 평균을 0으로, 표준 편차를 1로 만드는 변환을 의미. 표준화된 값은 Z 점수 또는 표준 점수로 불리며 다음의 공식으로 계산 $z=\\frac{x-\\mu}{\\sigma}$\n",
     "\n",
     "- 정규화(Normalization) : 정규화는 데이터의 범위를 [0, 1] 또는 [-1, 1]로 조정하는 변환을 의미. Min-Max 정규화는 가장 일반적인 형태로 다음의 공식으로 계산 $x_{normalized} = \\frac{x-\\min(X)}{\\max(X)-\\min(X)}$ 정규화는 다양한 변수 간의 스케일을 맞추어줌으로써 경사 하강법과 같은 최적화 알고리즘의 수렴 속도를 향상시키고, 학습 과정을 안정화 시킨다.\n",
@@ -194,13 +200,6 @@
    "metadata": {},
    "source": [
     "- Gapminder(http://www.gapminder.org/) :스웨덴의 비영리 통계 분석 서비스. 틈새주의(mind the gap)라는 지하철 경고문에서 영감을 얻은 이름은 세계관과 사실/데이터 간의 간극을 조심하고 좁히자는 이상을 반영"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "mm"
    ]
   }
  ],
