--- a/posts/통계, 데이터분석/통계_101_X_데이터_분석.ipynb
+++ b/posts/통계, 데이터분석/통계_101_X_데이터_분석.ipynb
@@ -979,6 +979,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- 자유도(degree of freedom) : 자유로이 움직일 수 있는 변수의 수\n",
+    "    \n",
+    "    ex) 표본크기가 n=10인 표본이라면 자유도는 10이지만 표본평균을 계산한 이후의 자유도는 9가 된다.\n",
+    "\n",
+    "    표본평균이 확정되었기에 9개의 데이터가 정해지면 남은 1개의 값을 확정할 수 있기 때문"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- 일표본 t검정 (가정) vs 이표본 t검정"
    ]
   },
