--- a/posts/etc/NVIDIA초청강연.ipynb
+++ b/posts/etc/NVIDIA초청강연.ipynb
@@ -94,10 +94,23 @@
     "\n",
     "- multi_node는 accelerater가 해줌.\n",
     "- **tinyllama로 peft를 켜서 모델을 생성 후 open dataset으로 실행 -> instruction dataset으로 실행, dp, ddp 사용**\n",
-    "- aica, GIST, nipa 등 연구원 전용 지원 혜택 받기\n",
+    "- AICA, GIST, nipa 등 연구원 전용 지원 혜택 받기\n",
     "- colab은 multi gpu가 안됨\n",
     "- colab pro + peft정도면 논문에 쓸 데이터 정도는 학습 가능"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 파운데이션 모델 끝단 변경(파인튜닝) + AI로 데이터 생성 => 논문채택 ↑\n",
+    "    - 사전학습 X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
