--- a/posts/Paper/Smart_Grid/smartgrid1.ipynb
+++ b/posts/Paper/Smart_Grid/smartgrid1.ipynb
@@ -18,14 +18,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine learning driven smart electric power system: Current trends and new perspectives (2020)"
+    "[Machine learning driven smart electric power system: Current trends and new perspectives (2020)](https://www.sciencedirect.com/science/article/pii/S0306261920307492)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[link](https://www.sciencedirect.com/science/article/pii/S0306261920307492)"
+    "---"
    ]
   },
   {
