--- a/posts/Statistics/1_probability_and_counting.ipynb
+++ b/posts/Statistics/1_probability_and_counting.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"[확률론] 1. Probability and counting\"\n",
+    "title: \"1. Probability and counting [확률론]\"\n",
     "author: \"고경수\"\n",
-    "date: \"08/24/2023\"\n",
+    "date: \"08/29/2023\"\n",
     "reference-location: margin\n",
     "citation-location: margin\n",
     "cap-location: margin\n",
