--- a/posts/Python/python_1.ipynb
+++ b/posts/Python/python_1.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Python 기초 복습\"\n",
+    "title: \"Python_1 자료형, Numpy, Pandas\"\n",
     "author: \"고경수\"\n",
     "date: \"01/22/2024\"\n",
     "reference-location: margin\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "['X1', 'X2', 'X3', 'Y1', 'Y2', 'Y3']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "[36, 144, 324, 576, 900, 1296, 1764, 2304]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "20"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "[['ksko', 201821991, 'M'], ['iu', 202254321, 'F'], ['hodong', 202011223, 'M']]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "['a', 'c', 'e', 'g']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "['a', 'c', 'e', 'g']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "['h', 'g', 'f', 'e', 'd', 'c', 'b', 'a']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "5"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "[10, 8, 17, 26, 40, 29, 52, 98]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "155"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        " '2023-03-20']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "       0.90909091, 1.        ])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "array([1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
        "       [44, 55, 66]])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
        "array([11, 22, 33, 44, 55, 66])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "       [44, 55, 66]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "       [66]])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
        "array([11, 22, 33, 44, 55, 66])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,17 +645,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.13998443,  0.76993493, -0.27241088, -1.15305554, -1.07096225,\n",
-       "        1.45305076, -0.69331096,  1.23455362,  0.29442183, -0.04995428])"
+       "array([ 0.10617284,  0.72375906,  0.21798968,  0.19402231, -0.68898998,\n",
+       "       -0.35166964,  0.99093298,  1.21214682, -0.60896544,  0.03254898])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,17 +666,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.52396217, 0.88733873, 0.60787126, 0.97045172, 0.93069322,\n",
-       "       0.06647319, 0.53918035, 0.71268956, 0.19958319, 0.05187009])"
+       "array([0.42891863, 0.34443157, 0.58565357, 0.95396214, 0.88773763,\n",
+       "       0.02981978, 0.40022832, 0.32824551, 0.52936974, 0.52123622])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,17 +687,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-1.58796509, -1.44762151],\n",
-       "       [-1.13955349, -0.93728862]])"
+       "array([[-0.38160921, -0.94802082],\n",
+       "       [ 0.45375798, -0.71627028]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
        "       [2, 3]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
        "       [1, 3]])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "       [ 1. ,  0. ]])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "       [0., 1.]])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        " (2, 3))"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "(array([3, 5, 7]), (3,))"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
        "(array([ 3, 12]), (2,))"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,6 +896,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -904,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -989,14 +998,12 @@
        "4  2022-12312   80   30   30  100"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "np.random.seed(43052)\n",
     "att = np.random.choice(np.arange(10,21)*5,20)\n",
     "rep = np.random.choice(np.arange(5,21)*5,20)\n",
@@ -1072,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1088,7 @@
        "<function __main__.<lambda>(x)>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1108,7 @@
        "9"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1144,7 @@
        "(0, 4, 16, 16)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1171,7 @@
        "(0, 4, 16, 16)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1200,7 @@
        "20"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1236,7 @@
        "([1, 2, 3], [2, 3, 4])"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1277,7 @@
        "Name: Height, Length: 17660, dtype: int64"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
