--- a/posts/Linear_Algebra/선형대수학.ipynb
+++ b/posts/Linear_Algebra/선형대수학.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ A = \\begin{pmatrix} 1 & 2 \\\\ 3 & 4 \\end{pmatrix} $, $ A^T = \\begin{pmatrix} 1 & 3 \\\\ 2 & 4 \\end{pmatrix} $ "
+    "$A = \\begin{pmatrix} 1 & 2 \\\\ 3 & 4 \\end{pmatrix}$, $A^T = \\begin{pmatrix} 1 & 3 \\\\ 2 & 4 \\end{pmatrix}$ "
    ]
   },
   {
@@ -79,14 +79,14 @@
     "\n",
     "5. $\\text{det}(A^T) = \\text{det}(A)$\n",
     "\n",
-    "6. $ (A^T)^{-1} = (A^{-1})^T $"
+    "6. $(A^T)^{-1} = (A^{-1})^T$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 내적과 정사영 (dot project & projection)"
+    "## 내적과 정사영 (dot product & projection)"
    ]
   },
   {
@@ -201,6 +201,184 @@
    "metadata": {},
    "source": [
     "`+` $l_0$-norm 은 0이아닌 성분의 \"개수\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 행렬의 곱셈과 네 가지 관점"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. 내적으로 바라보기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$AB=\\begin{pmatrix}a_1^T\\\\a_2^T\\\\a_3^T\\end{pmatrix} \\begin{pmatrix}b_1&b_2&b_3\\end{pmatrix}=\\begin{pmatrix}a_1^Tb_1&a_1^Tb_2&a_1^Tb_3\\\\a_2^Tb_1&a_2^Tb_2&a_2^Tb_3\\\\a_3^Tb_1&a_3^Tb_2&a_3^Tb_3\\end{pmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. rank-1 matrix의 합"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$AB = \\begin{pmatrix}a_1&a_2&a_3\\end{pmatrix}\\begin{pmatrix}b_1^T\\\\b_2^T\\\\b_3^T\\end{pmatrix}=a_1b_1^T+a_2b_2^T+a_3b_3^T$ ← 각각은 rank1 matrix 이다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. column space로 바라보기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`-` column space?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$AB = \\begin{pmatrix}a_1&a_2&a_3\\end{pmatrix}\\begin{pmatrix}x_1\\\\x_2\\\\x_3\\end{pmatrix}=a_1x_1+a_2x_2+a_3x_3$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. row space로 바라보기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$AB = \\begin{pmatrix}x_1&x_2&x_3\\end{pmatrix}\\begin{pmatrix}a_1^T\\\\a_2^T\\\\a_3^T\\end{pmatrix}=x_1a_1^T+x_2a_2^T+x_3a_3^T$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- transformer 이해에 도움이 된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## span과 column space(열공간)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Linear combination\n",
+    "\n",
+    "${\\color{red}a_1}v_1 + {\\color{red}a_2}v_2 + {\\color{red}a_3}v_3$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "${\\color{red}a_1, a_2, a_3}$ : 스칼라\n",
+    "\n",
+    "$v_1, v_2, v_3$ : 벡터"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 내가 가진 벡터들로 표현할 수 있는 영역은 뭘까? → span\n",
+    "\n",
+    "    2차원 전체(서로 다른 두 벡터), 라인(단위 벡터가 같은 두 벡터), 점($\\begin{pmatrix}0\\\\0\\end{pmatrix}$인 두 벡터) 등 ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ C(A) $\n",
+    "\n",
+    "$ range(A) $ \n",
+    "\n",
+    "column space 표기법"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 선형 독립과 기저 (linearly independent & basis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 벡터의 활동범위가 다르면 선형 독립이다.\n",
+    "\n",
+    "- 직교하면 무조건 독립이다. 하지만 독립이라고 직교하는 건 아니다.\n",
+    "\n",
+    "$$a_1\\bold{v_1} + a_2\\bold{v_2} + a_3\\bold{v_3} + ... = \\bold{0}$$\n",
+    "이 식이 성립하기 위해 계수($a_1, a_2, a_3, ...$)가 모두 0 이어야 한다면 이는 선형 독립이다.\n",
+    "\n",
+    "ex) $-2\\begin{pmatrix}1\\\\1\\end{pmatrix}+1\\begin{pmatrix}2\\\\2\\end{pmatrix} = 0$ 이런경우는 linearly dependent 한 케이스."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### basis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 어떤 공간을 이루는 필수적인 구성요소"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 어떤 벡터공간 V의 벡터들이 선형독립이면서 벡터공간 V 전체를 생성할 수 있다면 이 벡터들의 집합을 말한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 벡터공간 $R^m$의 임의의 원소를 표현하기 위해 필요한 최소한의 벡터로 이루어진 집합"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 항등행렬, 역행렬, 직교행렬 (indentity matrix & inverse & orthogonal matrix)"
    ]
   },
   {
