--- a/posts/Linear_Algebra/선형대수학.ipynb
+++ b/posts/Linear_Algebra/선형대수학.ipynb
@@ -318,11 +318,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ C(A) $\n",
+    "column space 표기법\n",
     "\n",
-    "$ range(A) $ \n",
+    "- $C(A)$\n",
     "\n",
-    "column space 표기법"
+    "- $range(A)$"
    ]
   },
   {
@@ -340,7 +340,7 @@
     "\n",
     "- 직교하면 무조건 독립이다. 하지만 독립이라고 직교하는 건 아니다.\n",
     "\n",
-    "$$a_1\\bold{v_1} + a_2\\bold{v_2} + a_3\\bold{v_3} + ... = \\bold{0}$$\n",
+    "$$a_1\\mathbf{v_1} + a_2\\mathbf{v_2} + a_3\\mathbf{v_3} + ... = \\mathbf{0}$$\n",
     "이 식이 성립하기 위해 계수($a_1, a_2, a_3, ...$)가 모두 0 이어야 한다면 이는 선형 독립이다.\n",
     "\n",
     "ex) $-2\\begin{pmatrix}1\\\\1\\end{pmatrix}+1\\begin{pmatrix}2\\\\2\\end{pmatrix} = 0$ 이런경우는 linearly dependent 한 케이스."
@@ -384,7 +384,68 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Identity matrix (항등 행렬)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 항등원과 비슷\n",
+    "- 어떤 행렬과 곱해도 그 행렬 그대로 나옴\n",
+    "- 정사각 행렬에 대해서만 정의"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$A \\times \\mathbf{I} = A$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$I_2 = \\begin{pmatrix}1&0\\\\0&1\\end{pmatrix}$ $I_3 = \\begin{pmatrix}1&0&0\\\\0&1&0\\\\0&0&1\\end{pmatrix}...$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 역행렬"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$A\\times{\\color{red}A^{-1}}=I$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 정사각 행렬에 대해서만 정의\n",
+    "- A가 어떤 행렬이냐에 따라서 항등행렬이 나오도록하는 $A^{-1}$이 존재할 수도 있고, 존재하지 않을 수도 있다.\n",
+    "    존재하면? A는 invertable하다 라고 표현\n",
+    "- A의 앞에 곱하든, 뒤에 곱하든 항등행렬이 나온다. 일반적인 행렬에서는 안되던 교환법칙이 성립한다는 것"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###"
+   ]
   }
  ],
  "metadata": {
