--- a/posts/Linear_Algebra/선형대수학.ipynb
+++ b/posts/Linear_Algebra/선형대수학.ipynb
@@ -834,13 +834,18 @@
     "1. $det(A)=0$ $↔$ A is singular(invertible 하지 않다.)\n",
     "2. A가 rank-deficient $↔$ $det(A)=0$\n",
     "    (하나라도 dependent한 열벡터가 있다면 즉, 다른 열벡터들의 조합으로 나타낼 수 있는 열벡터가 있다면 rank-deficient인 것 이고 그때는 $det(A)=0$이다.)\n",
-    "3. $\\begin{pmatrix}a_{11}&&...&\\\\&a_{22}&&\\\\...&&...&\\\\&&&a_{nn}\\end{pmatrix}$대각행렬에서, $det(A)=a_{11}a_{22}...a_{nn}$ (하나의 원소라도 0이 있으면 역행렬이 존재하지 않음. $det(A) \\neq 0$가 되기에)"
+    "3. $\\begin{pmatrix}a_{11}&0&...&0\\\\0&a_{22}&&\\\\...&&...&\\\\0&&&a_{nn}\\end{pmatrix}$대각행렬에서, $det(A)=a_{11}a_{22}...a_{nn}$ (하나의 원소라도 0이 있으면 역행렬이 존재하지 않음. $det(A) \\neq 0$가 되기에)\n",
+    "4. 삼각행렬(triangular matrix)에서도 마찬가지로 $det(A)=a_{11}a_{22}...a_{nn}$\n",
+    "5. 항등행렬 $\\begin{pmatrix}1&0&0\\\\0&1&0\\\\0&0&1\\end{pmatrix}$의 $\\det(I)=1$\n",
+    "6. A가 $n \\times n$행렬일 때 $det(cA) = c^ndet(A)$\n",
+    "7. $det(A^T)=det(A)$\n",
+    "\n",
+    "`★8.` $det(AB) = det(A)det(B)$\n",
+    "\n",
+    "9. $det(A^{-1}) = \\frac{1}{det(A)}$\n",
+    "\n",
+    "`★10.` $det(A) = \\lambda_1 \\lambda_2 ... \\lambda_n$ ($\\lambda$ = eigen value)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
