--- a/posts/Linear_Algebra/선형대수학.ipynb
+++ b/posts/Linear_Algebra/선형대수학.ipynb
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$a^Tb = \\lVert a \\rVert \\lVert a \\rVert = \\lVert a \\rVert^2$"
+    "$a^Ta = \\lVert a \\rVert \\lVert a \\rVert = \\lVert a \\rVert^2$"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "source": [
     "단위벡터(unit vector): 크기가 1인 벡터\n",
     "\n",
-    "$\\frac{a}{\\sqrt{a^T}{a}} = \\frac{a}{\\lVert a \\rVert}$ : Normalize\n",
+    "$\\frac{a}{\\sqrt{a^Ta}} = \\frac{a}{\\lVert a \\rVert}$ : Normalize\n",
     "\n",
     "$a \\cdot b$ → 같은 방향일때 가장 크고 반대 방향일 때 가장 작으며 직각일때 0"
    ]
@@ -434,7 +434,7 @@
    "source": [
     "- 정사각 행렬에 대해서만 정의\n",
     "- A가 어떤 행렬이냐에 따라서 항등행렬이 나오도록하는 $A^{-1}$이 존재할 수도 있고, 존재하지 않을 수도 있다.\n",
-    "    존재하면? A는 invertable하다 라고 표현\n",
+    "    존재하면? A는 invertible하다 라고 표현\n",
     "- A의 앞에 곱하든, 뒤에 곱하든 항등행렬이 나온다. 일반적인 행렬에서는 안되던 교환법칙이 성립한다는 것"
    ]
   },
