--- a/posts/Python/python_2.ipynb
+++ b/posts/Python/python_2.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Python_2 matplotlib\"\n",
+    "title: \"Python 데이터시각화 / matplotlib\"\n",
     "author: \"고경수\"\n",
     "date: \"01/23/2024\"\n",
     "reference-location: margin\n",
