--- a/posts/Python/python_3.ipynb
+++ b/posts/Python/python_3.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Python_3 seaborn, plotnine \"\n",
+    "title: \"Python 데이터시각화 / seaborn\"\n",
     "author: \"고경수\"\n",
     "date: \"01/23/2024\"\n",
     "reference-location: margin\n",
@@ -333,7 +333,7 @@
     "- 간단한 시각화는 matplotlib이 유리.\n",
     "- 보통 matplotlib이 더 본질적인 이해를 도와준다. 즉 seaborn에 대한 아주 고급기능은 오히려 matplotlib에 대한 통찰이 있어야 가능하다.\n",
     "- plotnine을 배우는게 더 좋다(더 우수함 + ggplot2도 같이 배워짐)\n",
-    "- plotly가 모든면에서 seaborn을 압도하는 추세.\n"
+    "- plotly가 모든면에서 seaborn을 압도하는 추세."
    ]
   },
   {
