--- a/posts/Python/vis_matplotlib.ipynb
+++ b/posts/Python/vis_matplotlib.ipynb
@@ -18,6 +18,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "전북대학교 통계학과 최규빈 교수님 강의 정리내용입니다.\n",
+    "\n",
+    "[https://guebin.github.io/DV2023/](https://guebin.github.io/DV2023/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Matplotlib"
    ]
   },
