--- a/posts/Linear_Algebra/선형대수학.ipynb
+++ b/posts/Linear_Algebra/선형대수학.ipynb
@@ -25,6 +25,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "통계학에서 필요한 선형대수학 개념들\n",
+    "\n",
+    "`-` 행렬 $A$의 역행렬이 존재 ↔ $A$가 full-rank matrix\n",
+    "\n",
+    "`-` semi positive definite matrix\n",
+    "\n",
+    "`-` 고유값분해: 실대칭행렬은 고유벡터행렬이 직교행렬이다.\n",
+    "\n",
+    "`-` SVD\n",
+    "\n",
+    "`-` basis, 선형공간"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "선형 방정식만을 다룬다.\n",
     "\n",
     "$\\cancel{ax^2}+bx+c=0$\n",
