--- a/posts/Statistics/SC.ipynb
+++ b/posts/Statistics/SC.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "최규빈 교수님 통계전산 수업 정리\n",
     "\n",
-    "수업에서는 Julia를 사용하지만 필요한 부분만 Python으로 바꾸어 작성하겠다."
+    "수업에서는 Julia를 사용하지만 필요한 부분만 Python으로 바꾸어 작성하였다."
    ]
   },
   {
@@ -1715,10 +1715,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### note3: delta method (생략)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 위치모수와 척도모수\n",
+    "\n",
+    "`-` 정규분포 특징\n",
+    "- 이론: $Z\\sim N(0,1) \\Rightarrow aZ+b \\sim N(b,a^2)$\n",
+    "- 생각보다 이거 엄청 신기한 기능이에요\n",
+    "- 정규분포에 어떠한 상수를 더해도 정규분포, 어떠한 상수를 곱해도 정규분포, 더하고 곱해도 정규분포!\n",
+    "\n",
+    "`-` 위치모수, 척도모수\n",
+    "1. 확률변수 $Z$가 분포 A를 따를 때 $Z+b$도 분포 A를 따름 $\\Rightarrow$ 분포A는 위치모수를 가짐\n",
+    "2. 확률변수 $Z$가 분포 B를 따를 때 $aZ$도 분포 B를 따름 $\\Rightarrow$ 분포A는 척도모수를 가짐\n",
+    "3. 확률변수 $Z$가 분포 C를 따를 때 $aZ+b$도 분포 C를 따름 $\\Rightarrow$ 분포A는 위치모수와 척도모수를 가짐\n",
+    "\n",
+    "`-` 예시:\n",
+    "- 분포C: {{정규분포, 균등분포, 로지스틱, 이중지수, 코쉬}}\n",
+    "- 분포A: 분포C와 동일\n",
+    "- 분포B: 분포C $\\cup$ {{지수분포, 감마분포}}\n",
+    "- 분포C - 분포A: 없다고 생각하세요..\n",
+    "- 분포C - 분포B: {{지수분포, 감마분포}}\n",
+    "\n",
+    "(예제1)\n",
+    "\n",
+    "(예제2)\n",
+    "\n",
+    "(예제3)\n",
+    "\n",
+    ".\n",
+    ".\n",
+    ".\n",
+    ".\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
