--- a/posts/Statistics/SC_1.ipynb
+++ b/posts/Statistics/SC_1.ipynb
@@ -32,7 +32,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import scipy.stats as sps\n"
+    "import scipy.stats as sps"
    ]
   },
   {
