--- a/posts/Statistics/SC_1.ipynb
+++ b/posts/Statistics/SC_1.ipynb
@@ -1880,7 +1880,7 @@
     "\n",
     "- 관찰: 우리예제의 경우에는 $H_0$가 참이라는 가정하에 $\\sum^{30}_{i=1}(\\frac{X_i-7}{2})^2\\sim\\chi^2(30)$\n",
     "\n",
-    "- 주장: $\\xi\\times\\frac{30}{4}=\\sum^{30}_{i=1}(x_i-7)^2$는 $\\chi^2(30)$에서 뽑힌 샘플이다."
+    "- 주장: $\\xi\\times\\frac{30}{4}=\\sum^{30}_{i=1}(\\frac{X_i-7}{2})^2\\sim\\chi^2(30)$는 $\\chi^2(30)$에서 뽑힌 샘플이다."
    ]
   },
   {
@@ -2190,7 +2190,10 @@
     "\n",
     "- $Y \\overset{d}{=}2\\frac{Z_1^2+Z_2^2}{2}+2\\frac{Z_3^2+Z_4^2}{2}$, where $R^2_i/2\\overset{iid}{\\sim}Exp(1)$\n",
     "\n",
-    "- $Y \\overset{d}{=} X_1 + X_2$, where $X_1, X_2 \\overset{iid}{\\sim}Exp(2)$ 마지막은 척도모수와 관련된..?"
+    "- $Y \\overset{d}{=} X_1 + X_2$, where $X_1, X_2 \\overset{iid}{\\sim}Exp(2)$ 마지막은 척도모수와 관련된..?\n",
+    "\n",
+    "> 마지막에 독립인 두개의 지수분포를 더한 것이 아닌 하나의 지수분포에 2를 곱한것이기에 평균이 2배인 지수분포가 된 것(지수분포는 척도모수를 가진다)\n",
+    "> 독립인 두 지수분포의 합은 지수분포를 따르지 않고 하나의 지수분포에 상수를 곱한 경우에는 여전히 지수분포를 따른다!"
    ]
   },
   {
@@ -2728,6 +2731,13 @@
     "- ANOVA (Analysis of Variance): **평균값을 비교**하는 데 사용(**3개 이상**의 그룹 비교) 일반적으로 F-통계량을 사용\n",
     "- 비모수 검정: 데이터가 정규분포를 따르지 않거나 등분산성을 만족하지 않을 때 사용\n",
     "- 생존분석: 사건이 발생하는 시간을 분석하는 데 사용. 생존 시간이나 사건 발생률을 비교하여 그룹 간의 차이를 확인"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
