--- a/posts/Signal_Processing/signal_system.ipynb
+++ b/posts/Signal_Processing/signal_system.ipynb
@@ -341,7 +341,7 @@
     "\n",
     "일반적으로 임의의 이산 함수 $x[n]$과 $h[n]$에 대해 두 함수의 컨볼루션은 다음과 같다.\n",
     "\n",
-    "$$x[n]*h[n] = \\sum^{\\infty}_{k=-\\infty}x[k]h[x-k]"
+    "$$x[n]*h[n] = \\sum^{\\infty}_{k=-\\infty}x[k]h[x-k]$$"
    ]
   },
   {
@@ -352,7 +352,8 @@
     "\n",
     "- 교환 법칙\n",
     "\n",
-    "두 신호 $x[n]$과 $h[n]에 대해 다음과 같이 교환 법칙이 성립\n",
+    "두 신호 $x[n]$과 $h[n]$에 대해 다음과 같이 교환 법칙이 성립\n",
+    "\n",
     "$$x[n]*h[n] = h[n]*x[n]$$\n",
     "\n",
     "1. 입력 신호와 시스템의 임펄스 응답의 역할을 바꾸어도 시스템의 출력은 여전히 같다는 것을 의미\n",
