--- a/posts/Signal_Processing/signal_system.ipynb
+++ b/posts/Signal_Processing/signal_system.ipynb
@@ -341,7 +341,7 @@
     "\n",
     "일반적으로 임의의 이산 함수 $x[n]$과 $h[n]$에 대해 두 함수의 컨볼루션은 다음과 같다.\n",
     "\n",
-    "$$x[n]*h[n] = \\sum^{\\infty}_{k=-\\infty}x[k]h[x-k]$$"
+    "$$x[n]*h[n] = \\sum^{\\infty}_{k=-\\infty}x[k]h[x-k]$$\n"
    ]
   },
   {
