--- a/posts/Signal_Processing/signal_system.ipynb
+++ b/posts/Signal_Processing/signal_system.ipynb
@@ -403,14 +403,14 @@
     "\n",
     "### stable (BIBO stable) system\n",
     "- $|x(t)|<\\infty \\quad \\rightarrow \\quad \\square \\quad \\rightarrow \\quad |g(t)|<\\infty$ \n",
-    "- 인풋이 시스템에 들어갔을 때 그 아웃풋 역시 발산하지 않는다.\n",
+    "- 수렴하는 인풋이 시스템에 들어갔을 때 그 아웃풋 역시 발산하지 않는다.\n",
     "- 발산하는 인풋을 넣었을 때는 그 아웃풋이 발산하는 발산하지 않든 BIBO라 이야기 할 수 없다.\n",
     "\n",
     "    어떤 bounded 된 input에 대해서든 bounded 된 아웃풋이 나와야 BIBO라 할 수 있다.\n",
     "\n",
-    "- $|y(t)| = |\\int|x(\\tau)h(t-\\tau)d\\tau| \\le \\int{\\color{red}|x(\\tau)h(t-\\tau)|}d\\tau = \\int{\\color{red}|x(\\tau)||h(t-\\tau)|}d\\tau$\n",
+    "- $|y(t)| = |\\int x(\\tau)h(t-\\tau)d\\tau| \\le \\int{\\color{red}|x(\\tau)h(t-\\tau)|}d\\tau = \\int{\\color{red}|x(\\tau)||h(t-\\tau)|}d\\tau$ $<B\\int^\\infty_{-\\infty}|h(t-\\tau)|d\\tau$\n",
     "\n",
-    "    적분의 절대값보다 절대값의 적분이 더 크거나 같다.\n",
+    "    - 적분의 절대값보다 절대값의 적분이 더 크거나 같다.\n",
     "\n",
     "    - 모든 복소수에 대하여 \n",
     "\n",
@@ -418,18 +418,17 @@
     "\n",
     "        $|A_1e^{j\\theta_1}||A_2e^{j\\theta_2}| = A_1A_2$\n",
     "\n",
-    "        $\\therefore$ $|xy| = |x||y|$"
+    "        $\\therefore$ $|xy| = |x||y|$\n",
+    "\n",
+    "    - $\\int^\\infty_{-\\infty}|h(t)|dt<\\infty$ ${\\color{yellow}\\quad \\Leftrightarrow \\quad BIBO}$"
    ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## DT Convolution"
+   ]
   },
   {
    "cell_type": "markdown",
