--- a/posts/Signal_Processing/signal_system.ipynb
+++ b/posts/Signal_Processing/signal_system.ipynb
@@ -420,7 +420,7 @@
     "\n",
     "        $\\therefore$ $|xy| = |x||y|$\n",
     "\n",
-    "    - $\\int^\\infty_{-\\infty}|h(t)|dt<\\infty$ ${\\color{yellow}\\quad \\Leftrightarrow \\quad BIBO}$"
+    "    - $\\int^\\infty_{-\\infty}|h(t)|dt<\\infty$ ${\\color{red}\\quad \\Leftrightarrow \\quad BIBO}$"
    ]
   },
   {
