--- a/posts/Signal_Processing/signal_system.ipynb
+++ b/posts/Signal_Processing/signal_system.ipynb
@@ -427,6 +427,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 유한/무한 길이의 임펄스 응답에 따른 구분\n",
+    "\n",
+    "- 임펄스 응답의 길이\n",
+    "\n",
+    "    - 유한: Finite Impulse Response(FIR)\n",
+    "\n",
+    "    FIR 시스템 예시) $y[n] = ax[n]+bx[n-1]$\n",
+    "\n",
+    "    이 때 임펄스 응답) $h[n]=a\\delta [n]+b\\delta [n-1]$\n",
+    "    \n",
+    "    - 무한: Infinite Impulse Response(IIR)\n",
+    "    \n",
+    "    IIR 시스템 예시) $y[n] + ay[n-1] = bx[n]$\n",
+    "\n",
+    "    이 때 임펄스 응답) $h[n]=(-a)^nb,\\quad n\\ge 0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## DT Convolution"
    ]
   },
