--- a/posts/Statistics/SC_2.ipynb
+++ b/posts/Statistics/SC_2.ipynb
@@ -1,17 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "---\n",
-    "title: \"[통계전산] 선형대수학\"\n",
-    "author: \"고경수\"\n",
-    "date: \"02/14/2024\"\n",
-    "reference-location: margin\n",
-    "citation-location: margin\n",
-    "cap-location: margin\n",
-    "---"
+    "# ---\n",
+    "# title: \"[통계전산] 선형대수학\"\n",
+    "# author: \"고경수\"\n",
+    "# date: \"02/14/2024\"\n",
+    "# reference-location: margin\n",
+    "# citation-location: margin\n",
+    "# cap-location: margin\n",
+    "# ---"
    ]
   },
   {
