--- a/posts/Statistics/RP_final.ipynb
+++ b/posts/Statistics/RP_final.ipynb
@@ -129,11 +129,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "`?` Stationary를 가정하면 좋은 점? (GPT)\n",
+    "\n",
+    "- 예측 가능성: Stationary(정류) 신호는 시간에 따라 통계적 특성이 변하지 않기 때문에 과거 데이터를 이용하여 미래를 예측하기가 상대적으로 쉽다. 예측 모델 설계에 유리\n",
+    "\n",
+    "- 데이터 분석 용이: 자기상관 함수(ACF)나 전력 스펙트럼 밀도(PSD)를 계산할 때 시간이 지남에 따라 평균이나 분산이 변하지 않는다고 가정할 수 있기 때문에 분석이 더 쉽고 명확\n",
+    "\n",
+    "- 모델 단순화: ARMA나 ARIMA 같은 시간에 따른 데이터 모델들은 stationary(정류성) 가정 하에서 더 잘 적용. stationary 하지 않은 데이터를 분석할 때는 데이터를 정류화(예: 차분을 통해) 해야 하지만 정류 데이터는 이러한 추가 변환 과정이 없어서 모델링이 단순\n",
+    "\n",
+    "- 이론적 분석의 용이성: 많은 신호 처리 이론과 방법들이 정류성을 가정하고 개발됨. 필터 설계, 스펙트럼 분석, 회귀 분석 등의 방법들이 정류 신호에 대해 쉽게 적용될 수 있다.\n",
+    "\n",
+    "- 안정성: Stationary 데이터는 시간에 따른 특성 변화를 고려하지 않아도 되므로, 시스템의 안정성을 분석하고 보장하는 데 유리. 이는 시스템의 설계와 유지보수에 있어서 중요한 장점"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Poisson Process\n",
     "\n",
     "- 포아송 분포는 단위 시간에서 어떤 사건이 몇 번 발생할 것인가를 표현하는 이산 확률 분포.\n",
     "\n",
-    "- 포아송 프로세스는 어떤 사건의 발생횟수가 포아송 분포를 따르는 확률 과정 (시간에 따라 그 확률이 변한다)\n",
+    "- 포아송 프로세스에서 시간 $t$ 내에 사건 발생 횟수 $N(t)$는 포아송 분포를 따른다.\n",
     "\n",
     "- A process of arrivals in continuous time is called **Poisson process** with rate $\\lambda$ if following two conditions hold:\n",
     "\n",
@@ -249,8 +266,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`?` 포아송 프로세스의 분포가 지수함수? 포아송과 포아송 프로세스의 관계? 지수 분포는???"
+    "# ~ Lec 14 노션만 보고 정리. 강의자료 한번 더 체크//"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
