--- a/posts/Statistics/RP_final.ipynb
+++ b/posts/Statistics/RP_final.ipynb
@@ -250,7 +250,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Gaussian Random Process"
+   ]
   },
   {
    "cell_type": "markdown",
