--- a/posts/Statistics/RP_final.ipynb
+++ b/posts/Statistics/RP_final.ipynb
@@ -257,18 +257,46 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "- $X(t)$가 가우시안 랜덤 프로세스이려면, 모든 유한한 시간 지점 집합에서의 샘플이 다변수 정규 분포를 따라야 한다.\n",
+    "\n",
+    "    1. 임의의 시간 지점에서의 가우시안 분포:\n",
+    "    \n",
+    "        임의의 시간 $t$ 에서의 값 $X(t)$ 는 가우시안 분포를 따른다.\n",
+    "\n",
+    "        수학적으로 $X(t)\\sim N(\\mu(t), \\sigma ^2(t))$ 로 나타낼 수 있으며, 여기서 $\\mu(t)$ 는 시간 $t$에서의 평균이고, $\\sigma^2(t)$는 분산이다.\n",
+    "\n",
+    "    2. 임의의 유한한 시간 지점 집합 $\\{t_1, t_2, ..., t_k\\}$ 에 대해, 벡터 $\\bold{X}=[X(t_1),X(t_2),...,X(t_k)]^T$ 는 가우시안 분포를 따른다.\n",
+    "    \n",
+    "        수학적으로, 벡터 $\\bold{X}$는 다변수 정규 분포 $N(\\mu, \\sum)$ 를 따른다. 여기서 $\\mu$는 평균 벡터, $\\sum$는 공분산 행렬이다.\n",
+    "\n",
+    "    3. 평균 함수와 공분산 함수:\n",
+    "\n",
+    "        가우시안 랜덤 프로세스는 평균 함수 $m(t)= \\bold{E}[X(t)]$ 와 공분산 함수 $k(t,t')=\\bold{E}[(X(t)-m(t))(X(t')-m(t'))]$ 로 완전히 정의된다.\n",
+    "\n",
+    "- WSS 가우시안 프로세스는 SSS 가우시안 프로세스이다.\n",
+    "\n",
+    "- White Gaussian Noise: 평균이 0이고 자기공분산이 디랙 델타 함수를 따르는 stationary Gaussian stochastic process이다."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ~ Lec 14 노션만 보고 정리. 강의자료 한번 더 체크//"
+    "### Brownian motion process(Wiener process)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 독립 증분: 시간 간격 $[s,t]$ 에서의 과정 변화량 $W(t)-W(s)$ 는 그 간격의 길이(t-s)에만 의존하고, 선택된 시간 간격에 독립적 \n",
+    "\n",
+    "2. 정규 증분: 증분 $W(t)-W(s)$ 는 평균이 0이고 분산이 $t-s$ 인 정규 분포를 따른다.\n",
+    "\n",
+    "3. 연속 경로: 브라우니안 모션의 경로는 연속적 (불연속 점이 없다)\n",
+    "\n",
+    "4. 시작 조건: $W(0)=0$ 에서 시작한다."
    ]
   },
   {
